feat: add users show endpoint to workbench
